<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/navy"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/comany_logo"
        android:layout_width="match_parent"
        android:layout_height="313dp"
        android:contentDescription="@string/company_logo"
        android:src="@drawable/d" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:layout_below="@+id/comany_logo"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up"
        android:hint="Enter First Name"
        android:textColorHint="@android:color/white"
        android:inputType="textCapSentences"
        android:drawableStart="@drawable/ic_account_box_white"
        android:textColor="@android:color/white"
         />

    <EditText
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up"
        android:layout_alignParentEnd="true"
        android:hint="@string/enter_surname"
        android:textColorHint="@android:color/white"
        android:inputType="textCapSentences"
        android:textColor="@android:color/white"
         />

    <EditText
        android:id="@+id/email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name"
        android:layout_marginTop="-6dp"
        android:hint="Enter Email Address"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_email_white"
        android:textColor="@android:color/white"
        />

    <EditText
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/email_address"
        android:hint="@string/enter_date_of_birth"
        android:textColorHint="@android:color/white"
        android:inputType="date"
        android:drawableStart="@drawable/ic_date_range_"
        android:textColor="@android:color/white"
        />

    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/birthday"
        android:hint="@string/enter_phone_number"
        android:textColorHint="@android:color/white"
        android:inputType="phone"
        android:drawableStart="@drawable/ic_phone_white"
        android:textColor="@android:color/white"
        />

    <Spinner
        android:id="@+id/phone_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthday"
        android:layout_toEndOf="@+id/phone"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/white"
        android:ems="10"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Enter Password"
        android:layout_below="@+id/phone"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:drawableStart="@drawable/ic_security_white"
        />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Confirm Password"
        android:layout_below="@+id/phone"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:layout_alignParentEnd="true"
        />

    <CheckBox
        android:id="@+id/conditions"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:text="Accept Terms and Conditions"
        android:checked="true"
        android:textColor="@android:color/white"
        android:onClick="showToast"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/conditions"
        android:layout_centerHorizontal="true"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="50dp"
        android:onClick="createAccount"

        />


</RelativeLayout>